// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > no orders > execute at 0, 8 and 16 seconds > execute_virtual_orders after 0 seconds 1`] = `
{
  "VirtualOrdersExecuted": undefined,
  "executedSwap": null,
  "executionResources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 33,
    "range_check_builtin_applications": 353,
    "steps": 13298,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > no orders > execute at 0, 8 and 16 seconds > execute_virtual_orders after 8 seconds 1`] = `
{
  "VirtualOrdersExecuted": undefined,
  "executedSwap": null,
  "executionResources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 33,
    "range_check_builtin_applications": 353,
    "steps": 13298,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > no orders > execute at 0, 8 and 16 seconds > execute_virtual_orders after 16 seconds 1`] = `
{
  "VirtualOrdersExecuted": undefined,
  "executedSwap": null,
  "executionResources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 33,
    "range_check_builtin_applications": 353,
    "steps": 13298,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > no orders > swap at 0, 8 and 16 seconds > swap after 0 seconds 1`] = `
{
  "VirtualOrdersExecuted": undefined,
  "executedSwaps": [
    {
      "delta": {
        "amount0": {
          "mag": 0n,
          "sign": false,
        },
        "amount1": {
          "mag": 0n,
          "sign": true,
        },
      },
      "liquidity_after": 1000000000000000000n,
      "sqrt_ratio_after": 340282366920938463463374607431768211456n,
      "tick_after": {
        "mag": 0n,
        "sign": false,
      },
    },
  ],
  "executionResources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 778,
    "steps": 28392,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > no orders > swap at 0, 8 and 16 seconds > swap after 8 seconds 1`] = `
{
  "VirtualOrdersExecuted": undefined,
  "executedSwaps": [
    {
      "delta": {
        "amount0": {
          "mag": 0n,
          "sign": false,
        },
        "amount1": {
          "mag": 0n,
          "sign": true,
        },
      },
      "liquidity_after": 1000000000000000000n,
      "sqrt_ratio_after": 340282366920938463463374607431768211456n,
      "tick_after": {
        "mag": 0n,
        "sign": false,
      },
    },
  ],
  "executionResources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 778,
    "steps": 28392,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > no orders > swap at 0, 8 and 16 seconds > swap after 16 seconds 1`] = `
{
  "VirtualOrdersExecuted": undefined,
  "executedSwaps": [
    {
      "delta": {
        "amount0": {
          "mag": 0n,
          "sign": false,
        },
        "amount1": {
          "mag": 0n,
          "sign": true,
        },
      },
      "liquidity_after": 1000000000000000000n,
      "sqrt_ratio_after": 340282366920938463463374607431768211456n,
      "tick_after": {
        "mag": 0n,
        "sign": false,
      },
    },
  ],
  "executionResources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 778,
    "steps": 28392,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > selling 1e18 token0 per second for one period > execute at 0, 8 and 16 seconds > execute_virtual_orders after 0 seconds 1`] = `
{
  "VirtualOrdersExecuted": undefined,
  "executedSwap": null,
  "executionResources": {
    "bitwise_builtin_applications": 1,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 35,
    "range_check_builtin_applications": 402,
    "steps": 13783,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > selling 1e18 token0 per second for one period > execute at 0, 8 and 16 seconds > execute_virtual_orders after 8 seconds 1`] = `
{
  "VirtualOrdersExecuted": {
    "last_virtual_order_time": 16n,
    "next_virtual_order_time": 24n,
    "token0_reward_rate": 0n,
    "token0_sale_rate": 4294967296000000000000000000n,
    "token1_reward_rate": 70401495567488007579667887541n,
    "token1_sale_rate": 0n,
  },
  "executedSwap": {
    "delta": {
      "amount0": {
        "mag": 8000000000000000000n,
        "sign": false,
      },
      "amount1": {
        "mag": 888591800356506238n,
        "sign": true,
      },
    },
    "liquidity_after": 1000000000000000000n,
    "sqrt_ratio_after": 37910245869088509744137099758441200029n,
    "tick_after": {
      "mag": 4389111n,
      "sign": true,
    },
  },
  "executionResources": {
    "bitwise_builtin_applications": 85,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 71,
    "range_check_builtin_applications": 2826,
    "steps": 52527,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > selling 1e18 token0 per second for one period > execute at 0, 8 and 16 seconds > execute_virtual_orders after 16 seconds 1`] = `
{
  "VirtualOrdersExecuted": {
    "last_virtual_order_time": 24n,
    "next_virtual_order_time": 32n,
    "token0_reward_rate": 0n,
    "token0_sale_rate": 4294967296000000000000000000n,
    "token1_reward_rate": 74554486103559739945166421132n,
    "token1_sale_rate": 0n,
  },
  "executedSwap": {
    "delta": {
      "amount0": {
        "mag": 8000000000000000000n,
        "sign": false,
      },
      "amount1": {
        "mag": 52418109978557470n,
        "sign": true,
      },
    },
    "liquidity_after": 1000000000000000000n,
    "sqrt_ratio_after": 20073287336062910776512971612071208249n,
    "tick_after": {
      "mag": 5660775n,
      "sign": true,
    },
  },
  "executionResources": {
    "bitwise_builtin_applications": 30,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 72,
    "range_check_builtin_applications": 2353,
    "steps": 41307,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > selling 1e18 token0 per second for one period > swap at 0, 8 and 16 seconds > swap after 0 seconds 1`] = `
{
  "VirtualOrdersExecuted": undefined,
  "executedSwaps": [
    {
      "delta": {
        "amount0": {
          "mag": 0n,
          "sign": false,
        },
        "amount1": {
          "mag": 0n,
          "sign": true,
        },
      },
      "liquidity_after": 1000000000000000000n,
      "sqrt_ratio_after": 340282366920938463463374607431768211456n,
      "tick_after": {
        "mag": 0n,
        "sign": false,
      },
    },
  ],
  "executionResources": {
    "bitwise_builtin_applications": 1,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 61,
    "range_check_builtin_applications": 827,
    "steps": 28877,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > selling 1e18 token0 per second for one period > swap at 0, 8 and 16 seconds > swap after 8 seconds 1`] = `
{
  "VirtualOrdersExecuted": {
    "last_virtual_order_time": 16n,
    "next_virtual_order_time": 24n,
    "token0_reward_rate": 0n,
    "token0_sale_rate": 4294967296000000000000000000n,
    "token1_reward_rate": 70401495567488007579667887541n,
    "token1_sale_rate": 0n,
  },
  "executedSwaps": [
    {
      "delta": {
        "amount0": {
          "mag": 8000000000000000000n,
          "sign": false,
        },
        "amount1": {
          "mag": 888591800356506238n,
          "sign": true,
        },
      },
      "liquidity_after": 1000000000000000000n,
      "sqrt_ratio_after": 37910245869088509744137099758441200029n,
      "tick_after": {
        "mag": 4389111n,
        "sign": true,
      },
    },
    {
      "delta": {
        "amount0": {
          "mag": 0n,
          "sign": false,
        },
        "amount1": {
          "mag": 0n,
          "sign": true,
        },
      },
      "liquidity_after": 1000000000000000000n,
      "sqrt_ratio_after": 340282366920938463463374607431768211456n,
      "tick_after": {
        "mag": 0n,
        "sign": false,
      },
    },
  ],
  "executionResources": {
    "bitwise_builtin_applications": 85,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 97,
    "range_check_builtin_applications": 3251,
    "steps": 67621,
  },
}
`;

exports[`core > twamm > 1e18 liquidity, starting price of 1, 0.3% fee > selling 1e18 token0 per second for one period > swap at 0, 8 and 16 seconds > swap after 16 seconds 1`] = `
{
  "VirtualOrdersExecuted": {
    "last_virtual_order_time": 24n,
    "next_virtual_order_time": 32n,
    "token0_reward_rate": 0n,
    "token0_sale_rate": 4294967296000000000000000000n,
    "token1_reward_rate": 140802991134976015159335775082n,
    "token1_sale_rate": 0n,
  },
  "executedSwaps": [
    {
      "delta": {
        "amount0": {
          "mag": 8000000000000000000n,
          "sign": false,
        },
        "amount1": {
          "mag": 888591800356506238n,
          "sign": true,
        },
      },
      "liquidity_after": 1000000000000000000n,
      "sqrt_ratio_after": 37910245869088509744137099758441200029n,
      "tick_after": {
        "mag": 4389111n,
        "sign": true,
      },
    },
    {
      "delta": {
        "amount0": {
          "mag": 0n,
          "sign": false,
        },
        "amount1": {
          "mag": 0n,
          "sign": true,
        },
      },
      "liquidity_after": 1000000000000000000n,
      "sqrt_ratio_after": 340282366920938463463374607431768211456n,
      "tick_after": {
        "mag": 0n,
        "sign": false,
      },
    },
  ],
  "executionResources": {
    "bitwise_builtin_applications": 85,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 99,
    "range_check_builtin_applications": 3268,
    "steps": 67897,
  },
}
`;
